# waffles

./: .gitignore  README.md  README.txt  index.html
demos/: Makefile  demos.sln
demos/bullet-2.77/: ._ChangeLog  README
demos/bullet-2.77/src/: Makefile
demos/caronhill/src/: CarOnHill.cpp  CarOnHill.h  Gui.cpp  Makefile  caronhill.vcproj  caronhill.vcxproj  main.cpp
demos/chess/src/: GChess.cpp  GChess.h  Gui.cpp  Gui.h  Makefile  chess.vcproj  chess.vcxproj  main.cpp
demos/community/src/: Makefile  community.vcproj  editor.cpp  editor.h  forum.cpp  forum.h  login.cpp  login.h  main.cpp  recommender.cpp  recommender.h  server.cpp  server.h
demos/cuda/src/: Makefile  main.cpp
demos/diff/src/: Makefile  diff.cpp  diff.h  main.cpp  server.cpp  server.h
demos/eigen/src/: Makefile  README.txt  eigen.vcxproj  main.cpp
demos/fourier_net/src/: Makefile  loader.cpp  loader.h  main.cpp
demos/hello_console/src/: Makefile  hello_console.vcproj  hello_console.vcxproj  main.cpp
demos/hello_gui/src/: Gui.cpp  Makefile  hello_gui.vcproj  hello_gui.vcxproj  main.cpp
demos/hello_ml/src/: Makefile  hello_ml.vcproj  hello_ml.vcxproj  main.cpp
demos/hello_web/src/: Makefile  hello_web.vcproj  hello_web.vcxproj  main.cpp
demos/interpolate/src/: GImagePng.h  Gui.cpp  Makefile  interpolate.vcproj  interpolate.vcxproj  main.cpp
demos/journal/src/: GImagePng.cpp  Makefile  journal.vcproj  journal.vcxproj  main.cpp
demos/jumper/src/: Body.cpp  Body.h  DemoApplication.cpp  DemoApplication.h  GL_ShapeDrawer.cpp  Makefile  PolicyLearner.cpp  PolicyLearner.h  jumper.vcproj  main.cpp
demos/manifold/src/: Makefile  Manifold.cpp  Manifold.h  main.cpp  manifold.vcproj  manifold.vcxproj
demos/neural_nets/: mnist_test.arff  mnist_train.arff
demos/neural_nets/src/: Makefile  main.cpp
demos/paint/src/: GImageJpeg.cpp  GImageJpeg.h  GImagePng.cpp  (+7 more)
lib/: .gitignore  SDL.lib  SDLmain.lib  libpng.lib  libpng64.lib  zlib.lib
src/: CMakeLists.txt  Makefile  percentsametest.arff  threshtest.arff  waffles.sln
src/GClasses/: CMakeLists.txt  G3D.cpp  G3D.h  GActivation.cpp  GActivation.h  GApp.cpp  GApp.h  GAssignment.cpp  GAssignment.h  GAssociative.cpp  GAssociative.h  GBayesianNetwork.cpp  GBayesianNetwork.h  GBezier.cpp  GBezier.h  GBigInt.cpp  GBigInt.h  GBitTable.cpp  GBitTable.h  GBits.cpp  GBits.h  GBlob.cpp  GBlob.h  GBlock.cpp  GBlock.h  GBlockWeightless.cpp  GBlockWeightless.h  GChess.cpp  GChess.h  GClasses.vcproj  GClasses.vcxproj  GCluster.cpp  GCluster.h  GCrypto.cpp  GCrypto.h  GCudaMatrix.cpp  GCudaMatrix.h  GCudaMatrixKernels.cu  GCudaMatrixKernels.h  GDecisionTree.cpp  (+167 more)
src/GSup/: G3D.cpp  G3D.h  GBezier.cpp  GBigInt.cpp  GBigInt.h  GBlob.cpp  GBlob.h  GChess.cpp  GCrypto.cpp  GDate.cpp  GDate.h  GDiff.cpp  GDiff.h  GDirList.cpp  GDynamicPage.cpp  GDynamicPage.h  GHttp.cpp  GHttp.h  GKeyPair.cpp  GKeyPair.h  GLoadBalance.cpp  GLoadBalance.h  GRayTrace.cpp  GRayTrace.h  GSmtp.cpp  GSmtp.h  GSocket.cpp  GSocket.h  GSup.vcproj  GVideo.cpp  GVideo.h  GWave.cpp  GWave.h  GWidgets.cpp  GWindows.cpp  GWindows.h  GXML.cpp  GXML.h  Makefile  uitypes.h
src/audio/: CMakeLists.txt  Makefile  main.cpp  waffles_audio.vcproj  waffles_audio.vcxproj
src/cluster/: CMakeLists.txt  Makefile  main.cpp  waffles_cluster.vcproj  waffles_cluster.vcxproj
src/depends/: Makefile
src/depends/GCuda/: GCudaLayers.cpp  GCudaLayers.cu  GCudaLayers.h  GCudaMatrix.cpp  GCudaMatrix.cu  GCudaMatrix.h  GCudaMatrixHelper.cu  GCudaMatrixKernels.cu  Makefile  README.txt
src/depends/generate/: GImagePng.cpp  Makefile  main.cpp  main.cpp~  waffles_generate.vcxproj
src/depends/security/: GKeyboard.cpp  GKeyboard.h  Makefile  README.txt  crawler.cpp  crawler.h  main.cpp  md4.cpp  md4.h  satellite.cpp  satellite.h  waffles_security.vcxproj
src/depends/security/escrow/: escrow.php
src/dimred/: CMakeLists.txt  Makefile  main.cpp  waffles_dimred.vcproj  waffles_dimred.vcxproj
src/generate/: Makefile  generate.vcproj  main.cpp  main.sln  waffles_generate.vcproj  waffles_generate.vcxproj
src/learn/: CMakeLists.txt  Makefile  learn.vcproj  main.cpp  waffles_learn.vcproj  waffles_learn.vcxproj
src/plot/: CMakeLists.txt  Makefile  main.cpp  plot.vcproj  plotchart.cpp  plotchart.h  waffles_plot.vcproj  waffles_plot.vcxproj
src/recommend/: CMakeLists.txt  Makefile  main.cpp  recommend.vcproj  waffles_recommend.vcproj  waffles_recommend.vcxproj
src/sparse/: CMakeLists.txt  Makefile  main.cpp  waffles_sparse.vcproj  waffles_sparse.vcxproj
src/test/: CMakeLists.txt  Makefile  main.cpp  test.vcproj  test.vcxproj
src/transform/: CMakeLists.txt  Makefile  main.cpp  transform.vcproj  waffles_transform.vcproj  waffles_transform.vcxproj
src/ts/: CMakeLists.txt  Makefile  main.cpp  waffles_ts.vcxproj
src/wizard/: CMakeLists.txt  Makefile  main.cpp  usage.cpp  usage.h  waffles_wizard.vcproj  waffles_wizard.vcxproj  wizard.vcproj
web/: .gitignore  DoxygenLayout.xml  changelog.html  docs.html  doxygen_config.txt  index.html  regenerate_api_docs.bash  regenerate_command_docs.bash  svn.html
web/command/: .gitignore
web/docs/: bayesnet.html  bugs.html  changelog.html  citing.html  collaborative_filtering.html  contributors.html  data_sources.html  demos.html  developers.html  dimred.html  document_classification.html  formats.html  git.html  learning_resources.html  linux.html  look_around.html  mac.html  matrices.html  neuralnet.html  new_learner.html  new_tool.html  overview.html  serialization.html  start_coding.html  supervised.html  supervised_examples.html  visualize.html  what_we_need.html  windows.html  wizard.html
web/images/: style.css
web/tutorial/: bigtable.html  bugs.html  charts.html  citing.html  collaborative_filtering.html  demos.html  developers.html  dimred.html  document_classification.html  formats.html  git.html  linux.html  look_around.html  mac.html  matrices.html  new_learner.html  new_tool.html  overview.html  serialization.html  start_coding.html  subversion.html  supervised.html  supervised_examples.html  visualize.html  what_we_need.html  windows.html  wizard.html
(+57 files in other folders)
